# project_cmake_template

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.cpp
project_lib/: CMakeLists.txt  class_file.cpp  class_file.hpp
project_lib/inner_lib/: CMakeLists.txt  inner_class.cpp  inner_class.hpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  inner_class_test.cpp  project_test.cpp
